# rvoxel

./: CLAUDE.md  Cargo.toml  env.sh  flake.nix
shaders/: fragment.frag.glsl  vertex.vert.glsl
src/: app.rs  debug.rs  main.rs  morton.rs  shapes.rs
src/app/: mod.rs  vulkan.rs
src/components/: camera.rs  mesh.rs  transform.rs
src/renderer/: camera.rs  mod.rs  shaders.rs  ubo.rs  uniforms.rs  vertex.rs  vulkan.rs
src/renderer/vulkan/: context.rs  mod.rs
src/resources/: input.rs  mod.rs  time.rs  window_handle.rs
src/systems/: debug_camera.rs  mod.rs
src/world/: chunk.rs  coords.rs  mod.rs  octree.rs  voxel.rs  world.rs
