[package]
name = "rvoxel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
ash = { version = "0.38.0", features = [] }
ash-window = "0.13.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
egui = "0.32.1"
egui-ash-renderer = "0.9.0"
egui-winit = "0.32.1"
raw-window-handle = { version = "0.6.2", features = ["std"] }
shaderc = "0.10.0"
tokio = { version = "1.47.1", features = ["full"] }
winit = { version = "0.30.12", features = ["serde"] }
