[package]
name = "rvoxel"
version = "0.1.0"
edition = "2024"

[features]
default = ["debug"]
debug = []

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
ash = { version = "0.38.0", features = ["debug"] }
ash-window = "0.13.0"
bevy_ecs = "0.17.2"
bytemuck = { version = "1.23.2", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
egui = "0.32.1"
egui-ash-renderer = "0.9.0"
egui-winit = "0.32.1"
glam = { version = "0.30.8", features = ["bytemuck"] }
parking_lot = "0.12.5"
raw-window-handle = { version = "0.6.2", features = ["std"] }
shaderc = "0.10.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.20", features = [
  "json",
  "serde",
  "valuable",
] }
winit = { version = "0.30.12", features = ["serde"] }
zorder = "0.2.2"
